# salvager

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  config.example.yaml  docker-compose.yml  pyproject.toml  wishlist.example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
_bmad-output/planning-artifacts/: prd.md
docs/release-audits/v1.0/: CAPTURE_COMMANDS.md  RELEASE_NOTES_DRAFT.md  SUMMARY.md
openspec/changes/add-listing-deeplink/: tasks.md
openspec/changes/add-logging-format-toggle/: design.md  proposal.md
openspec/changes/annotate-alerts-with-comps/: design.md  proposal.md  tasks.md
openspec/changes/ebay-import-charges-pricing/: design.md  proposal.md
openspec/changes/edit-alerts-on-state-change/: README.md  proposal.md
openspec/changes/ship-and-schedule-smoke-test/: design.md  proposal.md  tasks.md
openspec/changes/shipping-aware-pricing/: design.md
openspec/changes/wallapop-make-offer/: proposal.md
openspec/changes/wire-phase2-buy-orchestrator/: design.md  proposal.md  tasks.md
openspec/specs/listing-alert-comps/: spec.md
openspec/specs/listing-alert-deeplink/: spec.md
openspec/specs/listing-alert-state-updates/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/phase2-purchase-flow/: spec.md
openspec/specs/phase2-smoke-test/: spec.md
openspec/specs/shipping-aware-pricing/: spec.md
openspec/specs/wallapop-offer-flow/: spec.md
scripts/: adapter_discipline_lint.py  dump_audit_snapshots.py  payment_rail_lint.py  phase2_coverage_gate.py
src/hardware_hunter/: __init__.py  __main__.py
src/hardware_hunter/cli/: app.py
src/hardware_hunter/config/: config_yaml.py  permissions.py  wishlist_yaml.py
src/hardware_hunter/domain/: alert.py  audit.py  circuit.py  errors.py  evaluation.py  listing.py  phase2_audit.py
src/hardware_hunter/interfaces/: listing_evaluator.py  page_fetcher.py  phase2_state_reader.py  scheduler.py  store.py  telegram_surface.py
src/hardware_hunter/migrations/: 0002_phase2_schema.sql
src/hardware_hunter/observability/: logging.py  styling.py
src/hardware_hunter/orchestration/: callback_handler.py  circuit_breaker.py  composer.py  daemon.py  degradation_reporter.py  health_state.py  phase2_preflight.py  poll_loop.py  wallapop_fallback.py
src/hardware_hunter/templates/: __init__.py  config.example.yaml  wishlist.example.yaml
src/salvager/cli/: app.py  (+1 more)
tests/e2e/: test_crash_restart_consistency.py  test_poll_loop.py  test_poll_loop_offer_band.py
tests/integration/: test_buy_orchestrator.py  test_sigterm_drain.py  test_wallapop_session_recovery.py
tests/unit/: test_alert_renderer.py  test_alert_renderer_snapshots.py  test_alert_update_snapshots.py  test_alert_updater.py  test_audit_writer.py  test_audit_writer_append_only.py  test_callback_exit_codes.py  test_callback_handler.py  test_circuit_breaker.py  test_circuit_domain.py  test_cli_app.py  test_cli_audit.py  test_cli_explain.py  test_cli_health.py  test_cli_init.py  test_cli_login_wallapop.py  test_cli_offer.py  test_cli_test_search.py  test_cli_validate_config.py  test_cli_validate_wishlist.py  test_composer.py  test_comps.py  test_config_yaml.py  test_daemon.py  test_degradation_reporter.py  test_dev_emit_alert.py  test_domain_models.py  test_ebay_api_fetcher.py  test_env.py  test_escape_markdown_v2.py  test_health_state.py  test_hermes_mcp_client.py  test_interfaces.py  test_json_output_parseable.py  test_llm_cache_sqlite.py  test_llm_claude_evaluator.py  test_llm_gemini_evaluator.py  test_logging.py  test_marketplace_dispatch.py  test_offer_orchestrator.py  (+33 more)
(+134 files in other folders)
