[project]
name = "hardware-hunter"
version = "0.1.0"
description = "Self-hosted personal agent for second-hand homelab parts on Wallapop and eBay.es."
authors = [
    { name = "ifuensan", email = "ivanfs@b4os.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "typer>=0.25.1",
]

[project.scripts]
hardware-hunter = "hardware_hunter:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "syrupy>=5.1.0",
    "ty>=0.0.35",
]

[tool.ruff]
src = ["src", "tests", "scripts"]
extend-exclude = [".claude", ".agents", "_bmad", "_bmad-output"]

[tool.pytest.ini_options]
testpaths = ["tests"]
