[project]
name = "salvager"
version = "0.2.2"
description = "Self-hosted personal agent for second-hand homelab parts on Wallapop and eBay.es."
authors = [
    { name = "ifuensan", email = "ivanfs@b4os.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "curl-cffi>=0.15.0",
    "google-genai>=2.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "rich>=14.3.0",
    "ruamel-yaml>=0.19.1",
    "tinyfish>=0.2.5",
    "typer>=0.25.1",
    "playwright>=1.50.0",
]

[project.scripts]
salvager = "salvager:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.124.0",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "syrupy>=5.1.0",
    "ty>=0.0.35",
]

[tool.ruff]
src = ["src", "tests", "scripts"]
extend-exclude = [".claude", ".agents", "_bmad", "_bmad-output"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]      # test fixtures often have unused args
"scripts/**/*.py" = ["PTH123"]  # `open()` is fine in standalone scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
exclude = [
    "_bmad",
    "_bmad-output",
    "\\.claude",
    "\\.agents",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: long-running tests (opt-in via --runslow)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/salvager"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Phase 2 critical-path 90% threshold lands in Story 5.15.
# Phase 1 stories use coverage as informational only.
